app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wty-istio
  labels:
    istio-injection: enabled 
---
apiVersion: v1
kind: Service
metadata:
  name: wtyfft
  namespace: wty-istio
spec:
  selector:
    app: wtyfft
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wtyfft
  labels:
    app: wtyfft
  namespace: wty-istio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wtyfft
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
      labels:
        app: wtyfft
    spec:
      serviceAccountName: wtyfft
      containers:
      - name: wtyfft
        image: registry.cn-hangzhou.aliyuncs.com/wtysos11/wty-fft:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080   
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"   
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wtyfft-gateway
  namespace: wty-istio
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wtyfft
  namespace: wty-istio
spec:
  hosts:
  - "*"
  gateways:
  - wtyfft-gateway
  http:
  - match:
    - uri:
        prefix: /fft
    - uri:
        exact: "/metrics"
    route:
    - destination:
        host: wtyfft
        port:
          number: 8000
